--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,11 +16,15 @@ img {
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  display: flex;
 }
 
-.pokemnon {
-  flex-direction: row;
+.card-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
-  width: 100%;
+.pokemon {
+  width: 25%;
+  height: 25%;
 }
