--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  margin: 0;
 }
 body {
   margin: 0;
@@ -15,16 +16,24 @@ img {
 .App-container {
   width: 100%;
   height: 100%;
-  margin: 0 auto;
+  margin: 0;
+  padding: 10px, 10px;
+  background-color: rgb(124, 36, 36);
 }
 
 .card-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  gap: 10px;
+  justify-content: space-between;
+  background-color: rgb(137, 51, 51);
 }
 
 .pokemon {
-  width: 25%;
-  height: 25%;
+  width: 30%;
+  height: 30%;
+}
+
+.title {
+  background-image: url(../img/Pokemon-Logo.jpeg);
 }
